@@ -173,7 +173,7 @@ function myOnLoad() {
 </script>
 <?php 
 }
-  echo '<link rel="stylesheet" type="text/css" href="css_cacher.php?login" />';
+  echo '<link rel="stylesheet" type="text/css" href="css_cacher.php?login=1" />';
 
  // Print custom header (since we do not call print_header function)
  if ( ! empty ( $CUSTOM_SCRIPT ) && $CUSTOM_SCRIPT == 'Y' ) {
