@@ -1,5 +1,6 @@
 $Id$
 Version 1.1.2 (?? ??? 2006)
+ - Fixed bug [ 1593524 ] No CSS for "login.php" since "css_cacher-php" update
  - Added new About WebCalendar page
  - Fixed problem with AS used in sql table aliases
  - Fixed bug [ 1561485 ] User sorting doesn't work with LDAP users
